--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  whois_5.2.7.tar.xz: 6c8210432f080d61872d1e52da05c81395abae6f
+  whois-5.2.9.tar.gz: 4753ef60c504a2e5fc202551ae81fe812a86f7a2
