--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  whois-5.2.9.tar.gz: 4753ef60c504a2e5fc202551ae81fe812a86f7a2
+  whois_5.2.10.tar.gz: d15ba560dbb60677e74dd1e5aff675f6ae914901
