--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  whois_5.2.10.tar.gz: d15ba560dbb60677e74dd1e5aff675f6ae914901
+  whois_5.2.10.tar.xz: d15ba560dbb60677e74dd1e5aff675f6ae914901
