--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  whois_5.2.11.tar.xz: ce651f1ed2d500ddaa09f1bf8e98cb229d64c721
+  v5.2.13.tar.gz: d96b1ddbf8147c1117012230e875056eef859d7b
